2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Include functions_gis.php file that
	was missing.

2012-06-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php
	 include/functions.php: Added pass of check_referer by url to
	 solve problems with autorefresh functionality.

2012-06-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php
	 operation/reporting/reporting_xml.php: Fixed XML items exportation
	 and item editor for alert agent and alert event.

2012-06-09  Sancho Lerena <slerena@artica.es>

	* include/functions_config.php,
	godmode/setup/setup.php: Fixed problem removing API password from setup.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Improved performance of
	sub tree for policies tree view.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Improved performance of tree
	view for policies.

2012-06-08  Ramon Novoa  <rnovoa@artica.es>

	* include/graphs/fgraph.php: Protect against accidental output that
	  might corrupt an image.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	include/functions_groups.php,
	include/functions_os.php,
	operation/tree.php: Fixed a problem with unknown agent
	counting.

2012-06-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed update of custom 
	graph items.

2012-06-08  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_config.php, godmode/setup/setup.php: Fixed that
	ACL with API access cannot be removed after once configured.

2012-06-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: fixed the modules
	name with white spaces...again in Pandora console..
	
	* extensions/update_manager/lib/functions.ajax.php: upload lost
	changes.
