@@ -1,3 +1,14 @@
+2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/graphs/functions_gd.php, include/graphs/fgraph.php:
+	cleaned source code style.
+	
+	* include/functions_visual_map.php,
+	include/ajax/visual_console_builder.ajax.php,
+	godmode/reporting/visual_console_builder.editor.js,
+	godmode/reporting/visual_console_builder.editor.php: fixed the
+	strange behavior of the bars and bubbles in the editor.
+
 2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* operation/tree.php: Include functions_gis.php file that
